Added prisma seed

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "remix build",
     "dev": "remix dev",
     "postinstall": "remix setup node",
-    "start": "remix-serve build"
+    "start": "remix-serve build",
+    "seed": "node --require esbuild-register prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^3.6.0",
